appId: com.bferg89.recount
name: "Open Expo development server"
tags:
  - helper
---
- runFlow:
    when:
      visible: "Development Servers"
    commands:
      - tapOn: "Recount, http://.*:8081"
      - waitForAnimationToEnd:
          timeout: 5000
- runFlow:
    when:
      visible: "Continue"
    commands:
      - tapOn: "Continue"
      - waitForAnimationToEnd:
          timeout: 5000
- runFlow:
    when:
      visible: "Reload"
    commands:
      - tapOn: "Close"
      - waitForAnimationToEnd:
          timeout: 5000
